--- a/src/frontend/src/pages/room.astro
+++ b/src/frontend/src/pages/room.astro
@@ -25,22 +25,32 @@ const points = [0, '1/2', 1, 2, 3, 5, 8, 13, 20, 40, 100, '∞']
     <div class="flex flex-col items-start p-3" x-data>
       <PointTable />
 
-      <Button
-        className="mt-3 py-1 text-sm"
-        @click="$store.room.revealed ? room.unreveal() : room.reveal()"
-        x-text="$store.room.revealed ? 'Hide Votes' : 'Show Votes'"
-      />
+      <template x-if="$store.room.isOwner">
+        <Button
+          className="mt-3 py-1 text-sm flex items-center"
+          @click="$store.room.revealed ? room.unreveal() : room.reveal()"
+        >
+          <span class="iconify me-2" :class="$store.room.revealed ? 'mdi--visibility-off' : 'mdi--visibility'"></span>
+          <span x-text="$store.room.revealed ? 'Hide Votes' : 'Show Votes'"></span>
+        </Button>
+      </template>
 
-      <Button className="mt-12 py-1 text-sm" @click="room.resetVotes()">
-        Reset Votes
-      </Button>
+      <div class="flex-1"></div>
 
-      <Button
-        className="mt-3 py-1 text-sm"
-        @click="ev => copyText(ev, `${window.location.origin}/join/${$store.room.id}`)"
-      >
-        Copy join link
-      </Button>
+      <template x-if="$store.room.isOwner">
+        <div class="flex flex-row items-center">
+          <Button className="me-3 py-1 text-sm" @click="room.resetVotes()">
+            Reset Votes
+          </Button>
+
+          <Button
+            className="py-1 text-sm"
+            @click="ev => copyText(ev, `${window.location.origin}/join/${$store.room.id}`)"
+          >
+            Copy join link
+          </Button>
+        </div>
+      </template>
     </div>
 
     <div class="flex-1 p-3">
