--- a/src/frontend/src/pages/room.astro
+++ b/src/frontend/src/pages/room.astro
@@ -21,13 +21,13 @@ const points = [0, '1/2', 1, 2, 3, 5, 8, 13, 20, 40, 100, '∞']
 </script>
 
 <Layout title="Pointy Thing">
-  <main class="flex flex-row p-3">
+  <main class="flex flex-row p-3 max-w-5xl mx-auto">
     <div class="flex flex-col items-start p-3" x-data>
       <PointTable />
 
       <template x-if="$store.room.isOwner">
         <Button
-          className="mt-3 py-1 text-sm flex items-center"
+          className="my-3 py-1 text-sm flex items-center"
           @click="$store.room.revealed ? room.unreveal() : room.reveal()"
         >
           <span class="iconify me-2" :class="$store.room.revealed ? 'mdi--visibility-off' : 'mdi--visibility'"></span>
