--- a/src/frontend/src/components/Header.astro
+++ b/src/frontend/src/components/Header.astro
@@ -2,6 +2,6 @@
 
 ---
 
-<header class="bg-primary p-2">
+<header class="bg-primary dark:bg-primary-dark p-2 shadow-md">
   <a href="/"><h1 class="text-primary-text text-lg">Pointy Thing</h1></a>
 </header>
