--- a/src/frontend/src/components/PointTable.astro
+++ b/src/frontend/src/components/PointTable.astro
@@ -2,8 +2,8 @@
 
 ---
 
-<div class="bg-secondary w-72" x-data>
-  <div class="bg-primary mb-2 p-2 text-center">
+<div class="bg-secondary dark:bg-primary-dark w-72" x-data>
+  <div class="bg-primary dark:bg-primary mb-2 p-2 text-center">
     <h2 class="text-primary-text text-md">Vote Results</h2>
   </div>
 
