--- a/src/frontend/src/layouts/Layout.astro
+++ b/src/frontend/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ const { title } = Astro.props
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
   </head>
-  <body>
+  <body class="dark:bg-body-dark dark:text-text-dark">
     <Header />
     <slot />
   </body>
